# rover

./: README.md
base/: CMakeLists.txt  README.md  gamepad_interface.cpp  package.xml
base/launch/: launch.xml
base/src/: gamepad_interface.cpp
docker/: Dockerfile  entrypoint.sh
rover/: CMakeLists.txt  README.md  package.xml  rover-startup.service  rover-startup.sh  rover_control.ino
rover/launch/: launch.xml
rover/src/: socket-arduino_bridge.cpp
